Fix menu z-index

--- a/assets/css/blocks.editor.css
+++ b/assets/css/blocks.editor.css
@@ -1,5 +1,145 @@
+.gravityflow-entry-table thead tr {
+  background: #FFF; }
 
-.gravityflow-entry-table thead tr{background:#fff}.gravityflow-entry-table tr:nth-child(2n){background:#f9f9f9}.gravityflow-entry-table tr:nth-child(odd){background:#fff}.gravityflow-entry-table{border-collapse:collapse;width:100%;border-top:1px solid #ddd!important}.gravityflow-entry-table th{display:table-cell;padding:10px;border-right:0}.gravityflow-entry-table td{padding:10px;border-right:0}.gravityflow-entry-table th{border-top:1px solid #ddd!important}.gravityflow-entry-table tbody tr{border-left-width:3px;border-left-style:solid;border-left-color:transparent}
-#container{display:-ms-flexbox;display:flex;-ms-flex-direction:row;flex-direction:row;-ms-flex-align:stretch;align-items:stretch}#sidebar{width:200px}#main{-ms-flex-positive:1;flex-grow:1;margin-right:10px}#entry-details{margin-bottom:30px}.timeline-item{display:-ms-flexbox;display:flex;width:100%;margin-bottom:10px}.timeline-icon{width:70px;height:70px;background-color:#eee}.timeline-details{-ms-flex-positive:1;flex-grow:1;border:1px solid #eee;padding:10px;margin-left:20px}.timeline-meta{display:-ms-flexbox;display:flex;-ms-flex-pack:justify;justify-content:space-between}.timeline-user{width:50px}.timeline-date,.timeline-user{height:10px;background-color:#eee}.timeline-date{width:100px}.timeline-note,.timeline-note-half{height:10px;background-color:#eee;margin-top:10px}.timeline-note-half{width:50%}.field-label-container{width:100%;height:30px;padding:10px;background-color:#fafafa}.field-label{width:80px;height:10px;background-color:#ddd}.field-value{display:inline-block;width:40px;height:10px;margin:auto auto auto 10px;background-color:#eee}.gravityflow-actions{white-space:nowrap}.gravityflow-actions svg{fill:#ccc}.gravityflow-filters{clear:both;background:linear-gradient(0deg,#f5f5f5,#fafafa);border:1px solid #dfdfdf;overflow:auto;margin:8px 0;padding:12px;border-radius:3px;font-size:13px;line-height:2.1em;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.gravityflow-filters div{display:inline-block;height:30px;margin:5px;padding:5px;border:1px solid #ddd;color:silver;line-height:20px}.gravityflow-filters .gravityflow-filter-button{background-color:silver;color:#fff}
+.gravityflow-entry-table tr:nth-child(even) {
+  background: #f9f9f9; }
 
+.gravityflow-entry-table tr:nth-child(odd) {
+  background: #FFF; }
 
+.gravityflow-entry-table {
+  border-collapse: collapse;
+  width: 100%;
+  border-top: 1px solid #ddd !important; }
+
+.gravityflow-entry-table th {
+  display: table-cell;
+  padding: 10px;
+  border-right: 0; }
+
+.gravityflow-entry-table td {
+  padding: 10px;
+  border-right: 0; }
+
+.gravityflow-entry-table th {
+  border-top: 1px solid #ddd !important; }
+
+.gravityflow-entry-table tbody tr {
+  border-left-width: 3px;
+  border-left-style: solid;
+  border-left-color: transparent; }
+#container {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: row;
+      flex-direction: row;
+  -ms-flex-align: stretch;
+      align-items: stretch; }
+
+#sidebar {
+  width: 200px; }
+
+#main {
+  -ms-flex-positive: 1;
+      flex-grow: 1;
+  margin-right: 10px; }
+
+#entry-details {
+  margin-bottom: 30px; }
+
+.timeline-item {
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  margin-bottom: 10px; }
+
+.timeline-icon {
+  width: 70px;
+  height: 70px;
+  background-color: #eee; }
+
+.timeline-details {
+  -ms-flex-positive: 1;
+      flex-grow: 1;
+  border: 1px solid #eee;
+  padding: 10px;
+  margin-left: 20px; }
+
+.timeline-meta {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: justify;
+      justify-content: space-between; }
+
+.timeline-user {
+  width: 50px;
+  height: 10px;
+  background-color: #eee; }
+
+.timeline-date {
+  width: 100px;
+  height: 10px;
+  background-color: #eee; }
+
+.timeline-note,
+.timeline-note-half {
+  height: 10px;
+  background-color: #eee;
+  margin-top: 10px; }
+
+.timeline-note-half {
+  width: 50%; }
+
+.field-label-container {
+  width: 100%;
+  height: 30px;
+  padding: 10px;
+  background-color: #FAFAFA; }
+
+.field-label {
+  width: 80px;
+  height: 10px;
+  background-color: #DDD; }
+
+.field-value {
+  display: inline-block;
+  width: 40px;
+  height: 10px;
+  margin: auto auto auto 10px;
+  background-color: #EEE; }
+
+.gravityflow-actions {
+  white-space: nowrap; }
+
+.gravityflow-actions svg {
+  fill: #CCC; }
+
+.gravityflow-filters {
+  clear: both;
+  background: linear-gradient(to top, #f5f5f5, #fafafa);
+  border-color: #dfdfdf;
+  overflow: auto;
+  margin: 8px 0;
+  padding: 12px;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 3px;
+  font-size: 13px;
+  line-height: 2.1em;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none; }
+
+.gravityflow-filters div {
+  display: inline-block;
+  height: 30px;
+  margin: 5px;
+  padding: 5px;
+  border: 1px solid #ddd;
+  color: silver;
+  line-height: 20px; }
+
+.gravityflow-filters .gravityflow-filter-button {
+  background-color: silver;
+  color: white; }
